2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (options): Remove OPTION_ARG_OPTIONAL from options
	without argument.
	* util/grub-mount.c (options): Likewise.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Unify diskboot.img size message.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/http.c: Add TRANSLATORS comments.
	* grub-core/normal/cmdline.c: Likewise.
	* grub-core/normal/misc.c: Likewise.
	* grub-core/partmap/msdos.c: Likewise.
	* grub-core/parttool/msdospart.c: Likewise.
	* grub-core/script/execute.c: Likewise.
	* grub-core/script/main.c: Likewise.
	* grub-core/term/terminfo.c: Likewise.
	* grub-core/video/bitmap.c: Likewise.
	* util/grub-install.in: Likewise.
	* util/grub-mkimage.c: Likewise.
	* util/grub-mklayout.c: Likewise.
	* util/grub-setup.c: Likewise.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c (fuse_init): Unify cryptomount and loopback messages
	with similar messages in grub-fstest.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Unify "option requires an argument" message
	with similar messages in other files.
	* util/grub-mkconfig.in: Likewise.

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-set-default.in: Replace printf with gettext_printf (the
	string in in question is already translated from grub-reboot)

2012-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump up the version to beta1.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Fix handling of the
	case when min_align = 0.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix a spurious warning
	and fix a case when line_start overflows.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-reboot.in (usage): Mention id posibility.